# learning-opengl-again

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: glad.cmake  imgui.cmake  stb.cmake
resources/shaders/basic_lighting_scene/: main.fs  main.vs
resources/shaders/blending_scene/: grass.fs  grass.vs  main.vs
resources/shaders/coordinate_systems_scene/: main.fs
resources/shaders/cubemap_scene/: main.fs  main.vs  screen.vs  skybox.vs
resources/shaders/depth_test_scene/: main.fs
resources/shaders/framebuffers_scene/: screen.fs  screen.vs
resources/shaders/geometry_shader_scene/: explode.fs  explode.gs  explode.vs  main.gs  main.vs  normal.gs  normal.vs
resources/shaders/light_casters_scene/: main.fs  main.vs
resources/shaders/lighting_maps_scene/: main.fs  main.vs
resources/shaders/lighting_scene/: main.fs  main.vs
resources/shaders/materials_scene/: main.fs  main.vs
resources/shaders/model_scene/: main.fs  main.vs
resources/shaders/multiple_lights_scene/: main.fs  main.vs
resources/shaders/shaders_scene/: main.vs
resources/shaders/stencil_test_scene/: outline.fs
resources/shaders/textures_scene/: main.fs  main.vs
resources/shaders/transformations_scene/: main.fs
resources/shaders/ubo_scene/: main.vs
src/: app_context.hpp  application.cpp  application.hpp  applog.cpp  applog.hpp  callback_sink.hpp  camera.hpp  file.cpp  file.hpp  image.cpp  image.hpp  imgui_impl.cpp  imgui_impl.hpp  key.hpp  logger.cpp  logger.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  mouse.hpp  scene.hpp  scenes.hpp  shader.cpp  shader.hpp  shader_util.hpp  texture.cpp  texture.hpp  types.hpp
src/scenes/: basic_lighting_scene.hpp  blending_scene.hpp  camera_scene.hpp  colors_scene.hpp  coordinate_systems_scene.hpp  cubemap_scene.hpp  culling_scene.hpp  depth_test_scene.hpp  empty_scene.hpp  framebuffers_scene.hpp  geometry_shader_scene.hpp  hello_triangle.hpp  hello_triangle_scene.hpp  light_casters_scene.hpp  lighting_maps_scene.hpp  lighting_scene.hpp  materials_scene.hpp  model_scene.hpp  multiple_lights_scene.hpp  shaders_scene.hpp  stencil_test_scene.hpp  textures_scene.hpp  transformations_scene.hpp  ubo_scene.hpp
